Changes to templates to fix menu not collapsing

--- a/rooms/roomballot/static/css/bootstrap.css
+++ b/rooms/roomballot/static/css/bootstrap.css
@@ -9005,5 +9005,49 @@ button.navbar-toggler:focus
    padding: 16px;
 }
 
+.ui-autocomplete {
+  top: 100%;
+  display: none;
+  padding: 5px 0;
+  margin: 0 0;
+  text-align: left;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+}
+
+.ui-autocomplete > li > div {
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 1.42857143;
+  color: #333333;
+  white-space: nowrap;
+}
+
+.ui-state-hover,
+.ui-state-active,
+.ui-state-focus {
+  text-decoration: none;
+  color: #262626;
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
+
+.ui-helper-hidden-accessible {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  width: 1px;
+}
+
+
 tr .cursor { cursor: pointer; }
 /*# sourceMappingURL=bootstrap.css.map */
